# brewerypi-v2

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  README.md  alembic.ini  pyproject.toml
docs/: claude-project-starter.md  deploy-mcp-hetzner.md  design-decisions.md  getting-started.md  house-context.md
migrations/: env.py
scripts/: seed_sample_data.py
tests/: test_house_context.py  test_mcp_config_tools.py  test_mcp_config_tools_areas.py  test_mcp_config_tools_element_attribute_templates.py  test_mcp_config_tools_element_templates.py  test_mcp_config_tools_enterprises.py  test_mcp_config_tools_lookups.py  test_mcp_config_tools_sites.py  test_mcp_config_tools_tags.py  test_mcp_element_attribute_tools.py  test_mcp_element_tools.py  test_mcp_event_frame_attribute_template_tools.py  test_mcp_event_frame_template_tools.py  test_mcp_event_frame_tools.py  test_mcp_instructions.py  test_mcp_reading_timezone.py  test_mcp_server.py  test_mcp_tag_value_tools.py  test_models.py  test_services_areas.py  test_services_delete_guards.py  test_services_element_attribute_templates.py  test_services_element_attributes.py  test_services_element_templates.py  test_services_elements.py  test_services_enterprises.py  test_services_event_frame_attribute_templates.py  test_services_event_frame_attributes.py  test_services_event_frame_templates.py  test_services_event_frames.py  test_services_lookups.py  test_services_measurement_units.py  test_services_name_segments.py  test_services_sites.py  (+3 more)
(+41 files in other folders)
